--- a/htmlbasics/007_forms_input.html
+++ b/htmlbasics/007_forms_input.html
@@ -1,73 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forms & Input</title>
-</head>
-<body>
-    <form action="process.php">
+    <link rel="stylesheet" href="007_forms.css" />
+  </head>
+  <body>
+    <div class="form">
+      <form action="#">
         <!-- Name -->
         <div>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="Your Name">
+          <label for="name">Name</label>
+          <input
+            type="text"
+            id="name"
+            name="email"
+            placeholder="Your Name"
+            class=""
+          />
         </div>
         <!-- Email -->
         <div>
-            <label for="email">Email</label>
-            <input type="email" name="email" id="email" placeholder="example@email.com">
-
+          <label for="email">Email</label>
+          <input
+            type="email"
+            name="name"
+            id="email"
+            placeholder="example@email.com"
+            maxlength="10"
+          />
         </div>
         <!-- textarea -->
         <div>
-            <label for="message">Message</label><br>
-            <textarea name="message" id="message" cols="50" rows="10"></textarea>
+          <label for="message">Message</label><br />
+          <textarea name="message" id="message" cols="50" rows="10"></textarea>
         </div>
-            <!-- select -->
-            <div>
-            <label for="sex">Sex</label>
-            <select name="sex" id="sex">
-                <option value="male">Male</option>
-                <option value="Female" selected>Female</option>
-                <option value="other">Other</option>
-            </select>
+        <!-- select -->
+        <div>
+          <label for="sex">Sex</label>
+          <select name="sex" id="sex">
+            <option value="male">Male</option>
+            <option value="Female" selected>Female</option>
+            <option value="other">Other</option>
+          </select>
         </div>
-            <!-- number -->
-            <div>
-                <label for="age">Age</label>
-                <input type="number" name="age" id="age">
-            </div>
-            <!-- date -->
-            <div>
-                <label for="birthdate">Birthdate</label><br>
-                <input type="date" name="birthdate" id="birthdate">
-            </div>
-            <!-- radio button -->
-            <div>
-                <label for="membership"> 
-                    Subscription Plan
-                </label>
-                    <input type="radio" name="membership" value="free"id="membership" checked><span>Free</span>
-                    <input type="radio" name="membership" value="standard"id="membership"><span>Standard</span>
-                    <input type="radio" name="membership" value="premium"id="membership"><span>Premium</span>
-            </div>
-            <!-- checkbox -->
-            <div>
-                <label for="hobbies">
-                    I Like OS..
-                </label>
-                <input type="checkbox" name="hobbies" value="free"id="hobbies" checked><span>IOS</span>
-                <input type="checkbox" name="hobbies" value="standard"id="hobbies"><span>ANDROID</span>
-                <input type="checkbox" name="hobbies" value="premium"id="hobbies"><span>MICROSOFT</span>
-                <input type="checkbox" name="hobbies" value="premium"id="hobbies" checked><span>LINUX</span>
-                <input type="checkbox" name="hobbies" value="premium"id="hobbies"><span>MACOS</span>
-            </div>
-            <!-- Input Submit -->
-            <input type="submit" value="submit">
-            <!-- Button  -->
-            <button type="reset">Reset</button>
-    </form>
-    
-</body>
+        <!-- number -->
+        <div>
+          <label for="age">Age</label>
+          <input type="number" name="age" id="age" />
+        </div>
+        <!-- date -->
+        <div>
+          <label for="birthdate">Birthdate</label><br />
+          <input type="date" name="birthdate" id="birthdate" />
+        </div>
+        <!-- radio button -->
+        <div>
+          <label for="membership"> Subscription Plan </label>
+          <input
+            type="radio"
+            name="membership"
+            value="free"
+            id="membership"
+            checked
+          /><span>Free</span>
+          <input
+            type="radio"
+            name="membership"
+            value="standard"
+            id="membership"
+          /><span>Standard</span>
+          <input
+            type="radio"
+            name="membership"
+            value="premium"
+            id="membership"
+          /><span>Premium</span>
+        </div>
+        <!-- checkbox -->
+        <div>
+          <label for="hobbies"> I Like OS.. </label>
+          <input
+            type="checkbox"
+            name="hobbies"
+            value="free"
+            id="hobbies"
+            checked
+          /><span>IOS</span>
+          <input
+            type="checkbox"
+            name="hobbies"
+            value="standard"
+            id="hobbies"
+          /><span>ANDROID</span>
+          <input
+            type="checkbox"
+            name="hobbies"
+            value="premium"
+            id="hobbies"
+          /><span>MICROSOFT</span>
+          <input
+            type="checkbox"
+            name="hobbies"
+            value="premium"
+            id="hobbies"
+            checked
+          /><span>LINUX</span>
+          <input
+            type="checkbox"
+            name="hobbies"
+            value="premium"
+            id="hobbies"
+          /><span>MACOS</span>
+        </div>
+        <!-- Input Submit -->
+        <input type="submit" value="submit" />
+        <!-- Button  -->
+        <button type="reset">Reset</button>
+      </form>
+    </div>
+  </body>
 </html>
