hotelhbt using about and contac us page

--- a/hotelWebsite/about.html
+++ b/hotelWebsite/about.html
@@ -16,7 +16,8 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
+    <link preload rel="stylesheet" href="css/flex-style.css" />
   </head>
   <body>
     <header>
@@ -31,19 +32,70 @@
         </div>
       </nav>
     </header>
-    <div id="about">
-      <div class="container">
-        <div class="showcase-content">
-          <h1><span class="text-primary">About</span> Hotel BT</h1>
-          <p class="lead">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Consectetur, neque.
+    <main>
+      <section class="hero">
+        <div class="rich-text">
+          <h1 class="title">
+            <span class="text-primary">About</span> Hotel BT
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum id
+            debitis assumenda at rerum vero molestiae corporis natus. Nesciunt
+            nam repudiandae accusamus molestiae labore perspiciatis, corrupti
+            sequi. Deleniti, libero error? Vitae explicabo fugit dicta enim
+            consectetur veritatis nulla excepturi maiores tempore? Voluptates
+            commodi totam libero illum nesciunt. Iure aliquam corporis cumque
+            qui fuga! Modi, adipisci? Voluptate ratione ad inventore esse.
           </p>
-          <a class="btn" href="./about.html">About Over Hotel</a>
         </div>
-      </div>
-    </div>
-    <div class="clr"></div>
+        <div class="showcase-img">
+          <img src="./assets/mateo-fernandez-XTC538P_eWk-unsplash.jpg" alt="" />
+        </div>
+      </section>
+      <section id="testimonial">
+        <ul>
+          <li>
+            <img src="./assets/person-1.jpg" alt="" />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
+              ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
+              tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
+              eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
+              soluta dolor earum error necessitatibus doloribus, odio deleniti,
+              sint rerum officiis commodi consequatur placeat laboriosam nobis!
+              Tempora corporis dolore, itaque ea iusto neque culpa libero
+              cumque.
+            </p>
+          </li>
+          <li>
+            <img src="./assets/person-2.jpg" alt="" />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
+              ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
+              tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
+              eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
+              soluta dolor earum error necessitatibus doloribus, odio deleniti,
+              sint rerum officiis commodi consequatur placeat laboriosam nobis!
+              Tempora corporis dolore, itaque ea iusto neque culpa libero
+              cumque.
+            </p>
+          </li>
+          <li>
+            <img src="./assets/person-2.jpg" alt="" />
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
+              ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
+              tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
+              eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
+              soluta dolor earum error necessitatibus doloribus, odio deleniti,
+              sint rerum officiis commodi consequatur placeat laboriosam nobis!
+              Tempora corporis dolore, itaque ea iusto neque culpa libero
+              cumque.
+            </p>
+          </li>
+        </ul>
+      </section>
+    </main>
 
     <footer>Hotel BT &copy; 2022, All RIghts Reserved</footer>
   </body>
