--- a/hotelWebsite/index.html
+++ b/hotelWebsite/index.html
@@ -35,10 +35,7 @@
         <div class="container">
           <div class="showcase-content">
             <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
-            <p class="lead">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur, neque.
-            </p>
+            <p class="lead">Unforgettable Stays, Memorable Experiences.</p>
             <a class="btn" href="./about.html">About Over Hotel</a>
           </div>
         </div>
@@ -49,11 +46,12 @@
       <article class="r-intro">
         <h1><span class="text-primary">The History</span> Of Our Hotel</h1>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
-          aliquam dolor alias iste autem, quaerat magni unde accusantium qui
-          fuga placeat quidem quo pariatur, voluptatum, ea sequi? Corporis,
-          explicabo quisquam dolor placeat praesentium nesciunt mollitia quos
-          nobis natus voluptatum asperiores!
+          Hotel BT (Est. 1995): In 1995, recognizing the growing popularity of
+          beach destinations, the Magnolia Hotel Chain expanded with the opening
+          of Hotel BT. Nestled along a pristine coastline, the resort boasted
+          breathtaking ocean views, pristine sandy beaches, and a range of
+          recreational activities. It soon became synonymous with relaxation and
+          rejuvenation, attracting visitors from far and wide.
         </p>
         <a class="btn btn-light" href="./about.html">Read More</a>
       </article>
@@ -66,8 +64,12 @@
 
         <h2>Great Location</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-          veniam!
+          It's great to hear that the HBT Hotel has a great location! A
+          convenient and favorable location is definitely a significant aspect
+          when choosing a hotel. Guests can benefit from easy access to nearby
+          attractions, transportation options, and amenities. A great location
+          can enhance the overall experience and convenience of staying at the
+          HBT Hotel.
         </p>
       </article>
       <article class="box bg-primary">
@@ -75,8 +77,15 @@
 
         <h2>Free Meals</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-          veniam!
+          It's always a bonus when a hotel offers complimentary meals to its
+          guests. Free meals can add value to the overall experience and help
+          guests save on dining expenses during their stay. Whether it's a
+          complimentary breakfast, lunch, or dinner, having access to free meals
+          can be convenient and appreciated by guests. It allows them to start
+          their day with a satisfying meal or enjoy a complimentary dining
+          option without having to go out or spend extra money. Free meals can
+          enhance the overall comfort and satisfaction of staying at the HBT
+          Hotel.
         </p>
       </article>
       <article class="box">
@@ -84,13 +93,21 @@
         <i class="fas"></i>
         <h2>Fitness Room</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-          veniam!
+          Having a fitness room at the HBT Hotel is a great feature for guests
+          who prioritize their health and fitness during their stay. A fitness
+          room provides an on-site space equipped with exercise machines,
+          weights, and other fitness equipment, allowing guests to maintain
+          their workout routines even while traveling. It offers convenience and
+          saves guests the hassle of finding a gym or fitness facility
+          elsewhere. Having a fitness room at the hotel encourages guests to
+          stay active and promotes a healthy lifestyle. It can be a valuable
+          amenity for guests looking to exercise, release stress, or simply keep
+          up with their fitness goals while staying at the HBT Hotel.
         </p>
       </article>
     </section>
     <div class="clr"></div>
 
-    <footer>Hotel BT &copy; 2022, All RIghts Reserved</footer>
+    <footer>Hotel BT &copy; 2023, All RIghts Reserved</footer>
   </body>
 </html>
