--- a/hotelWebsite/contact.html
+++ b/hotelWebsite/contact.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Welcome to the most extraordinary hotel in Boston Massachusetts"
+      content="Contact Hotel BT, the most extraordinary luxury hotel in Boston, Massachusetts. Fill out the form and get in touch with our dedicated team. Book your stay today!"
     />
 
-    <title>Hotel BT | Contact</title>
+    <title>Hotel BT | Contact - Luxury Hotel in Boston, Massachusetts</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="./css/flex-style.css" />
   </head>
   <body>
     <header>
@@ -30,65 +30,43 @@
           </ul>
         </div>
       </nav>
-      <div id="showcase">
-        <div class="container">
-          <div class="showcase-content">
-            <h1><span class="text-primary">Enjoy</span> Your Stay</h1>
-            <p class="lead">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Consectetur, neque.
-            </p>
-            <a class="btn" href="./about.html">About Over Hotel</a>
-          </div>
+    </header>
+    <section id="contact">
+      <div class="container">
+        <div class="showcase-content">
+          <h1 class="title"><span class="text-primary">Contact</span> Us</h1>
+          <p class="lead">please fill out the form to contact us</p>
+          <form action="">
+            <label for="">Name</label>
+            <input type="text" name="" id="" />
+            <label for="">Email</label>
+            <input type="email" name="" id="" />
+            <label for="">Message</label>
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+            <a class="btn" type="submit" href="#">Submit</a>
+          </form>
         </div>
       </div>
-    </header>
-    <section class="intro">
-      <article class="l-intro"></article>
-      <article class="r-intro">
-        <h1><span class="text-primary">The History</span> Of Our Hotel</h1>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
-          aliquam dolor alias iste autem, quaerat magni unde accusantium qui
-          fuga placeat quidem quo pariatur, voluptatum, ea sequi? Corporis,
-          explicabo quisquam dolor placeat praesentium nesciunt mollitia quos
-          nobis natus voluptatum asperiores!
-        </p>
-        <a class="btn btn-light" href="./about.html">Read More</a>
-      </article>
-      <div class="clr"></div>
     </section>
 
-    <section class="services">
+    <section class="contact-us">
       <article class="box">
-        <i class="fas fa-hotel fa-3x"></i>
-
-        <h2>Great Location</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-          veniam!
-        </p>
+        <i class="fas fa-building fa-3x"></i>
+        <h2>Location</h2>
+        <p>2nd Floor, 5th Commercial Zone, Karim Block, Lahore.</p>
       </article>
       <article class="box bg-primary">
-        <i class="fas fa-utensils fa-3x"></i>
-
-        <h2>Free Meals</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-          veniam!
-        </p>
+        <i class="fas fa-phone fa-3x"></i>
+        <h2>Phone Number</h2>
+        <p>+92 320 488 4500</p>
       </article>
       <article class="box">
-        <i class="fas fa-dumbbell fa-3x"></i>
+        <i class="fas fa-envelope fa-3x"></i>
         <i class="fas"></i>
-        <h2>Fitness Room</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum,
-          veniam!
-        </p>
+        <h2>Email Address</h2>
+        <p>info@digiisense.com</p>
       </article>
     </section>
-    <div class="clr"></div>
 
     <footer>Hotel BT &copy; 2022, All RIghts Reserved</footer>
   </body>
