--- a/hotelWebsite/about.html
+++ b/hotelWebsite/about.html
@@ -53,47 +53,50 @@
         </div>
       </section>
       <section id="testimonial">
-        <ul>
-          <li>
-            <img src="./assets/person-1.jpg" alt="" />
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
-              ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
-              tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
-              eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
-              soluta dolor earum error necessitatibus doloribus, odio deleniti,
-              sint rerum officiis commodi consequatur placeat laboriosam nobis!
-              Tempora corporis dolore, itaque ea iusto neque culpa libero
-              cumque.
-            </p>
-          </li>
-          <li>
-            <img src="./assets/person-2.jpg" alt="" />
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
-              ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
-              tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
-              eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
-              soluta dolor earum error necessitatibus doloribus, odio deleniti,
-              sint rerum officiis commodi consequatur placeat laboriosam nobis!
-              Tempora corporis dolore, itaque ea iusto neque culpa libero
-              cumque.
-            </p>
-          </li>
-          <li>
-            <img src="./assets/person-2.jpg" alt="" />
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
-              ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
-              tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
-              eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
-              soluta dolor earum error necessitatibus doloribus, odio deleniti,
-              sint rerum officiis commodi consequatur placeat laboriosam nobis!
-              Tempora corporis dolore, itaque ea iusto neque culpa libero
-              cumque.
-            </p>
-          </li>
-        </ul>
+        <div class="testimonial-overlay">
+          <h2 class="l-heading">What over Guests Say</h2>
+          <ul>
+            <li>
+              <img src="./assets/person-1.jpg" alt="" />
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
+                ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
+                tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
+                eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
+                soluta dolor earum error necessitatibus doloribus, odio
+                deleniti, sint rerum officiis commodi consequatur placeat
+                laboriosam nobis! Tempora corporis dolore, itaque ea iusto neque
+                culpa libero cumque.
+              </p>
+            </li>
+            <li>
+              <img src="./assets/person-2.jpg" alt="" />
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
+                ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
+                tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
+                eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
+                soluta dolor earum error necessitatibus doloribus, odio
+                deleniti, sint rerum officiis commodi consequatur placeat
+                laboriosam nobis! Tempora corporis dolore, itaque ea iusto neque
+                culpa libero cumque.
+              </p>
+            </li>
+            <li>
+              <img src="./assets/person-2.jpg" alt="" />
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi,
+                ipsa sapiente, aliquam nemo illum eveniet enim maiores fugiat
+                tenetur vitae eligendi maxime adipisci numquam? Aut repellendus
+                eligendi esse itaque ea. Itaque, eligendi voluptatibus incidunt
+                soluta dolor earum error necessitatibus doloribus, odio
+                deleniti, sint rerum officiis commodi consequatur placeat
+                laboriosam nobis! Tempora corporis dolore, itaque ea iusto neque
+                culpa libero cumque.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
