--- a/hotelWebsite/contact.html
+++ b/hotelWebsite/contact.html
@@ -31,41 +31,48 @@
         </div>
       </nav>
     </header>
-    <section id="contact">
+    <section id="contact-form" class="py-3">
       <div class="container">
         <div class="showcase-content">
           <h1 class="title"><span class="text-primary">Contact</span> Us</h1>
           <p class="lead">please fill out the form to contact us</p>
-          <form action="">
-            <label for="">Name</label>
-            <input type="text" name="" id="" />
-            <label for="">Email</label>
-            <input type="email" name="" id="" />
-            <label for="">Message</label>
-            <textarea name="" id="" cols="30" rows="10"></textarea>
-            <a class="btn" type="submit" href="#">Submit</a>
+          <form action="./process.php">
+            <div class="form-group">
+              <label for="fullName">Name</label>
+              <input type="text" name="" id="fullName" />
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input type="email" name="" id="email" />
+            </div>
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea name="" id="message" cols="30" rows="10"></textarea>
+            </div>
+            <button class="btn" type="submit">Submit</button>
           </form>
         </div>
       </div>
     </section>
 
-    <section class="contact-us">
-      <article class="box">
-        <i class="fas fa-building fa-3x"></i>
-        <h2>Location</h2>
-        <p>2nd Floor, 5th Commercial Zone, Karim Block, Lahore.</p>
-      </article>
-      <article class="box bg-primary">
-        <i class="fas fa-phone fa-3x"></i>
-        <h2>Phone Number</h2>
-        <p>+92 320 488 4500</p>
-      </article>
-      <article class="box">
-        <i class="fas fa-envelope fa-3x"></i>
-        <i class="fas"></i>
-        <h2>Email Address</h2>
-        <p>info@digiisense.com</p>
-      </article>
+    <section id="contact-info" class="bg-dark">
+      <div class="container">
+        <article class="box">
+          <i class="fas fa-building fa-3x"></i>
+          <h2>Location</h2>
+          <a href="https://www.google.com/maps?1=G73J%2B5G%20Lahore">2nd Floor, 5th Commercial Zone, Karim Block, Lahore.</a>
+        </article>
+        <article class="box">
+          <i class="fas fa-phone fa-3x"></i>
+          <h2>Phone Number</h2>
+          <a href="tel:+923204884500">+92 320 488 4500</p>
+        </article>
+        <article class="box">
+          <i class="fas fa-envelope fa-3x"></i>
+          <h2>Email Address</h2>
+          <a href="mailto:info@digiisense.com">info@digiisense.com</a>
+        </article>
+      </div>
     </section>
 
     <footer>Hotel BT &copy; 2022, All RIghts Reserved</footer>
