--- a/htmlbasics/006_lists_tables.html
+++ b/htmlbasics/006_lists_tables.html
@@ -1,102 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- unordered Lists -->
-    <!-- ul>li{Item $}*5 
-    Default Css Settings
-    ul {
-  display: block;
-  list-style-type: disc;
-  margin-top: 1em;
-  margin-bottom: 1 em;
-  margin-left: 0;
-  margin-right: 0;
-  padding-left: 40px;
-}
-    -->
-    
-<ul >
-    <li>Item 1</li>
-    <li>Item 2</li>
-    <li>Item 3</li>
-    <li>Item 4</li>
-    <li>Item 5</li>
-</ul>
-<!-- orderlist -->
-<ol type="a">
-    <li>Items1</li>
-    <li>Items2</li>
-    <li>Items3</li>
-    <li>Items4</li>
-    <li>Items5</li>
-    <li>Items6</li>
-</ol>
-
-<!-- Nested Lists -->
-
-<ul>
-    <li>HOME</li>
-    <li>ABOUT
-        <ul>
-            <li>Company Profile</li>
-            <li>Chairman Message</li>
-        </ul>
-    </li>
-    <li>CORE SERVICES
-        <ul>
-            <li>FM Logistics</li>
-            <li>FM Express</li>
-            <li>LCS Courier & Cargo</li>
-        </ul>
-    </li>
-    <li>CAREERS</li>
-    <li>GALLERY</li>
-    <li>ONLINE TICKECT BOOKING</li>
-</ul>
-
-
-<!-- Tables -->
-<table>
-    <thead>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tables</title>
+  </head>
+  <body>
+    <!-- Tables -->
+    <table>
+      <thead>
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Email</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Email</th>
         </tr>
-    </thead>
-    <tbody>
+      </thead>
+      <tbody>
         <tr>
-            <td>Abdullah</td>
-            <td>Ghani</td>
-            <td>abdullahghani.dev@gmail.com</td>
+          <td>Abdullah</td>
+          <td>Ghani</td>
+          <td>abdullahghani.dev@gmail.com</td>
         </tr>
         <tr>
-            <td>Anzar</td>
-            <td>zahid</td>
-            <td>zahidanzar@gmail.com</td>
+          <td>Anzar</td>
+          <td>zahid</td>
+          <td>zahidanzar@gmail.com</td>
         </tr>
         <tr>
-            <td>Abdullah</td>
-            <td>Ghani</td>
-            <td>abdullahghani.dev@gmail.com</td>
+          <td>Abdullah</td>
+          <td>Ghani</td>
+          <td>abdullahghani.dev@gmail.com</td>
         </tr>
-    </tbody>
-</table>
-
-
-
-
-
-
-
-
-
-
-</body>
+      </tbody>
+    </table>
+  </body>
 </html>
