--- a/htmlbasics/02-headings-paragraphs/002_typography.html
+++ b/htmlbasics/02-headings-paragraphs/002_typography.html
@@ -18,16 +18,26 @@
 
     <!-- Paragraph -->
     <!-- 
-        b bold,i italic,u under,s strike through -- depricated
+        b bold,i italic,u under,s strike through -- deprecated
     ### Semantic Tag
         strong -- for bold text
         em -- italic text
         br - break line 
         hr - Horrizontal
         del - strike through
-
      -->
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Consectetur doloremque,</strong> consequuntur accusantium ad dolor dignissimos eaque esse minus qui atque praesentium iusto quidem suscipit natus cumque iure quis explicabo. Ratione.
+
+     <!-- Text Emphasis Tags -->
+    <p>This is <strong>important</strong> text</p>
+    <p>This is <em>emphasized</em> text</p>
+    <p>This is <mark>highlighted</mark> text</p>
+    <p>This is <del>deleted</del> text</p>
+    <p>This is <ins>inserted</ins> text</p>
+    <p>This is <sub>subScripted</sub> text</p>
+    <p>This is <sup>superScripted</sup> text</p>
+
+    
+     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <strong>Consectetur doloremque,</strong> consequuntur accusantium ad dolor dignissimos eaque esse minus qui atque praesentium iusto quidem suscipit natus cumque iure quis explicabo. Ratione.
     Reiciendis culpa iusto in tempora error perferendis recusandae,<br>
      <em >minus porro tenetur voluptatum! Dolorum nulla</em>, <del>repudiandae beatae </del>veniam architecto quos<hr>nisi modi fuga numquam, laudantium incidunt magnam! Magnam, minima?
     </p>
