--- a/htmlbasics/14-form/01-text-based-inputs/index.html
+++ b/htmlbasics/14-form/01-text-based-inputs/index.html
@@ -9,7 +9,7 @@
     <h1>Text Inputs</h1>
     <form action="#">
       <label for="name">Name</label><br />
-      <input type="text" id="name" placeholder="Your Full Name" /><br />
+      <input type="text" id="name" /><br />
       <label for="email">Email</label><br />
       <input type="email" id="email" /><br />
       <label for="password">Password</label><br />
