--- a/htmlbasics/18-table/index.html
+++ b/htmlbasics/18-table/index.html
@@ -9,6 +9,9 @@
   <body>
     <!-- Tables -->
     <table>
+      <colgroup>
+        <col style="background-color: darkgoldenrod" />
+      </colgroup>
       <thead>
         <tr>
           <th>First Name</th>
